# amml-assessment

./: .gitignore  README.md  main.ipynb  pyproject.toml
conv-lstm/: augmentation_results.json  convlstm-experiment.csv  create_data.py  hyperparam-sweep.yaml  main.ipynb  model.py  n3_test_results.csv  n6_test_results.csv  noise-experiment.py  noise-experiment.yaml  noise-sweep.yaml  noise.ipynb  train.py
conv-lstm/data/: test-n3-denoised-no-outliers.pt  test-n3-denoised.pt  test-n3-no-outliers.pt  test-n3.pt
data/: n3-test.csv  n6-test.csv
image_embedding/: main.ipynb
lerp/: main.ipynb
rcnn/: model.py
rim/: main.ipynb  model.py  rim-test.ipynb  rim.ipynb
utils/: README.md  pyproject.toml
utils/src/utils/: __init__.py  data.py
vae/: main.ipynb  model.py
writeup/: main.tex  refs.bib
